--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">MyPly</string>
+    <string name="home_order_recent">최신</string>
+    <string name="home_order_popular">인기</string>
+    <string name="home_order_preference">내 취향</string>
     <string name="keep">보관함</string>
     <string name="keep_count">뮤직 폴라로이드 %d개</string>
 </resources>
