--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,20 @@
 <resources>
     <string name="app_name">MyPly</string>
+
     <string name="home_order_recent">최신</string>
     <string name="home_order_popular">인기</string>
     <string name="home_order_preference">내 취향</string>
+
     <string name="keep">보관함</string>
     <string name="keep_count">뮤직 폴라로이드 %d개</string>
+
+    <string name="mypage">마이페이지</string>
+    <string name="mypage_keyword">%s의 취향 키워드</string>
+    <string name="mypage_service_info">서비스 정보</string>
+    <string name="mypage_app_version">앱 버전</string>
+    <string name="mypage_team">만든 사람들</string>
+    <string name="mypage_open_source">Open Source License</string>
+    <string name="mypage_user_support">사용자 지원</string>
+    <string name="mypage_edit_nickname">닉네임 수정</string>
+    <string name="mypage_contact">문의하기</string>
 </resources>
