[FEAT] 200자 이상 일 시, 경고 문구 표시

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,5 +51,6 @@
     <string name="share_instagram">인스타그램에 공유</string>
     <string name="save_gallery">갤러리에 저장</string>
     <string name="toast_save_image">갤러리에 폴라로이드가 저장되었어요.</string>
+    <string name="keep_write_max_caution">200글자 이하로 입력할 수 있어요.</string>
 
 </resources>
