--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,8 @@
     <string name="save_gallery">갤러리에 저장</string>
     <string name="toast_save_image">갤러리에 폴라로이드가 저장되었어요.</string>
 
+    <string name="playlist_write_memo"><u>감상 쓰기</u></string>
+    <string name="playlist_save">플레이리스트를 저장했어요.</string>
+    <string name="playlist_delete">보관함에서 플레이리스트를 삭제했어요.</string>
+
 </resources>
