--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,5 +52,10 @@
     <string name="save_gallery">갤러리에 저장</string>
     <string name="toast_save_image">갤러리에 폴라로이드가 저장되었어요.</string>
     <string name="search_no_result">‘%s’ 에 대한 검색 결과가 없어요.\n다른 키워드로 검색해 보세요.</string>
+    <string name="onboarding_next">다음</string>
+    <string name="onboarding_1">유튜브 영상 플레이리스트를\n한 곳에서 모아볼 수 있어요.</string>
+    <string name="onboarding_2">내 취향에 맞는 플레이리스트를\n키워드 검색을 통해 찾을 수 있어요.</string>
+    <string name="onboarding_3">플레이리스트에 대한 내 생각을\n기록하고 공유할 수 있어요</string>
+    <string name="onboarding_start_btn">시작하기</string>
 
 </resources>
