--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,11 @@
     <string name="keep_write_memo_title">나의 감상 기록</string>
     <string name="keep_write_hint">플레이리스트에 대한 나의 감상을 기록해 보세요.</string>
     <string name="keep_write_count">%d/200</string>
+    <string name="keep_delete_title">플레이리스트를 보관함에서 삭제할까요?</string>
+    <string name="keep_delete_body">작성된 감상 기록이 함께 삭제됩니다.</string>
+    <string name="keep_delete_pos">삭제</string>
+    <string name="keep_delete_neg">취소</string>
+
 
     <string name="mypage">마이페이지</string>
     <string name="mypage_keyword">%s의 취향 키워드</string>
